@@ -94,4 +94,10 @@ void dwarf_expr_eval (struct dwarf_expr_context *ctx, unsigned char *addr,
 		      size_t len);
 CORE_ADDR dwarf_expr_fetch (struct dwarf_expr_context *ctx, int n);
 
+
+unsigned char *read_uleb128 (unsigned char *buf, unsigned char *buf_end,
+			     ULONGEST * r);
+unsigned char *read_sleb128 (unsigned char *buf, unsigned char *buf_end,
+			     LONGEST * r);
+
 #endif
